# libsc

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT  CONTRIBUTING  Doxyfile.in  Makefile.am  Makefile.sc.mk.in  Makefile.sc.pre.in  NEWS  README  README.md  _typos.toml  bootstrap  configure.ac  scgnulib  scindent  scspell
.github/ISSUE_TEMPLATE/: please-investigate.md
.github/workflows/: ci.yml  ci_autotools_tarball.yml  ci_cmake.yml  ci_cmake_tarball.yml  ci_darwin.yml
.github/workflows/composite-cmake/: action.yml
bugs/: issue-04ae88702a9f6d21e8be9af5f12b70dc25d05b17.yaml  issue-0abee8bb980e793066eac95db0b2c5ac946ce949.yaml  issue-2b229897e97d73ad3313b39f5043221e399996f1.yaml  issue-307055f1e9a4ef01d09267aae4e41d62b894606b.yaml  issue-3a78f43954db1996755732df98db805415ab4ce8.yaml  issue-498931301b13195e239d47941ee37086dc40cef6.yaml  issue-7f4c9393e1e2f9d173c9633dd3e1a96b947f702a.yaml  issue-82067d245dbf57b2a938b7c2f1e24ab49920737e.yaml  issue-a1aa51e81a6f7c92ad91376ce9150ce05496049c.yaml  issue-ba52b9a974843d380af0f183866ec47c43348bbe.yaml  issue-be85cecaeb979aee5dd659e2d4da4c06961aaea8.yaml  issue-d1c07123f50402055f9cc973e68872d7ed05fc7b.yaml  issue-f06e2b2e596ab478be598cfcf380d688eb1fa8b6.yaml  issue-f6e1a861093ae06fe8ea3826f4fbb3c4247dc2a8.yaml  issue-fbfa7595e16582a783ea86bbedd1ae38049faecf.yaml  project.yaml
cmake/: .cpack_ignore  FindSC.cmake  check_mpiaintdiff.cmake  check_mpicommshared.cmake  check_mpiio.cmake  check_mpithread.cmake  check_mpitype.cmake  check_mpiwinshared.cmake  check_ompicommsocket.cmake  check_v4l2.c  compilers.cmake  config.cmake  config.cmake.in  git.cmake  init_build_type.cmake  install.cmake  jansson.cmake  options.cmake  pkgconf.cmake  pkgconf.pc.in  sc.pc.in  sc_config.h.in  utils.cmake  valgrind.cmake  zlib.cmake
cmake/Modules/: FindSC.cmake
config/: acinclude.m4  acx_blas.m4  acx_lapack.m4  acx_lint.m4  acx_restrict.m4  ax_c_version.m4  ax_prefix_config_h.m4  ax_split_version.m4  lualist  sc_autotools.pc.in  sc_blas.m4  sc_builtin.m4  sc_c_check_flag.m4  sc_c_version.m4  sc_cuda.m4  sc_include.m4  sc_jansson.m4  sc_lapack.m4  sc_lint.m4  sc_memalign.m4  sc_mpi.m4  sc_openmp.m4  sc_package.m4  sc_prefix_config_h.m4  sc_provides.m4  sc_pthread.m4  sc_qsort.m4  sc_shared.m4  sc_soversion.in  sc_trilinos.m4  sc_v4l2.m4
doc/: Doxyfile.in  FREEBSD  author_aghakhani.txt  author_anselmann.txt  author_bangerth.txt  author_brandt.txt  author_dreyer.txt  author_dutka.txt  author_elsweijer.txt  author_ghosh.txt  author_hirsch.txt  author_holke.txt  author_karembe.txt  author_kestener.txt  author_knapp.txt  author_malossi.txt  author_markert.txt  author_marshak.txt  author_ranocha.txt  author_rdb.txt  author_rudi.txt  author_schlottke-lakemper.txt  author_seyboldt.txt  author_wang.txt  author_weischer.txt  author_welters.txt  author_williams.txt  author_zhbhfut.txt  codespell_ignore.txt  coding_standards.txt  error_policies.txt  libsc-build-wdeps.sh  mainpage.dox  mainpage.h  release_notes.txt  sc3.dox  v1.2.branches
doc/attic/: sc3_omp.h  sc_blas.c  sc_dmatrix.c  sc_dmatrix.h  sc_lapack.c  sc_obstack.c  sc_warp.c  sc_warp.h
doc/attic/bugs/: issue-0abee8bb980e793066eac95db0b2c5ac946ce949.yaml  issue-3a78f43954db1996755732df98db805415ab4ce8.yaml  project.yaml  (+9 more)
doc/git/: README
doc/nix/: builder.sh  default.nix
doc/portability/: README  isportm4.sh  portitm4.sh  testfile.m4
example/: CMakeLists.txt
example/bspline/: Makefile.am  bspline.c  bspline_per.c
example/camera/: Makefile.am  camera.c
example/cuda/: Makefile.am  main.c  prac5.cu  prac5.h
example/dmatrix/: Makefile.am  dmatrix.c
example/function/: Makefile.am  function.c
example/json/: Makefile.am  json_rw.c
example/linksc/: Makefile.am  README  bootstrap  configure.ac  liblinksc.c  liblinksc.h  linksc.c
example/logging/: Makefile.am  logging.c
example/matrixmultiply/: Makefile.am  matrixmultiply.c
example/openmp/: Makefile.am  config_with_omp  juqueen_job.js  openmp.c
example/options/: Makefile.am  logging.c  options.c  options.ini  sc_options_example.ini  sc_options_example.json  sc_options_preload.ini
example/pthread/: Makefile.am  condvar.c  pthread.c
example/sc3basic/: Makefile.am  basics.c  options.c
example/sc3json/: Makefile.am  json_rw.c
example/sort/: Makefile.am  sort.c
example/testing/: Makefile.am  sc_test_shmem.c
example/v3basics/: Makefile.am  basics.c  log.c  logger.c
example/v4l2/: Makefile.am  v4l2.c
example/vehicles/: Makefile  Makefile.am  boat.c  boat.h  car.c  car.h  main.c  scobj_main.c  scobj_main2.c  tunedcar.c  tunedcar.h  vehicle.c  vehicle.h
example/warp/: warp.c
gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
iniparser/: AUTHORS  Makefile.am  dictionary.c  dictionary.h  iniexample.c  iniparser.c  iniparser.h  inistring.c  inistring.h
libb64/: Makefile.am  README  b64dec.c  b64enc.c  cdecode.c  cencode.c  libb64.h
lua/: Makefile.am
src/: CMakeLists.txt  Makefile.am  sc.c  sc.h  sc3.c  sc3.h  sc3_alloc.c  sc3_alloc.h  sc3_alloc_internal.h  sc3_array.c  sc3_array.h  sc3_base.c  sc3_base.h  sc3_empty.c  sc3_empty.h  sc3_error.c  sc3_error.h  sc3_log.c  sc3_log.h  sc3_memstamp.c  sc3_memstamp.h  sc3_mpi.c  sc3_mpi.h  sc3_mpi_types.h  sc3_mpienv.c  sc3_mpienv.h  sc3_omp.c  sc3_omp.h  sc3_openmp.c  sc3_openmp.h  sc3_options.c  sc3_options.h  sc3_refcount.c  sc3_refcount.h  sc3_refcount_internal.h  sc3_trace.c  sc3_trace.h  sc_allgather.c  sc_allgather.h  sc_amr.c  (+99 more)
src/sc_builtin/: gettimeofday.c  sc_puff.h  zconf.h
test/: CMakeLists.txt  Makefile.am  test_allgather.c  test_arrays.c  test_builtin.c  test_complex.c  test_containers.c  test_darray_work.c  test_dmatrix.c  test_dmatrix_pool.c  test_file.c  test_helpers.c  test_io_file.c  test_io_sink.c  test_keyvalue.c  test_mpi_pack.c  test_mpienv.c  test_node_comm.c  test_notify.c  test_pqueue.c  test_reduce.c  test_scda.c  test_search.c  test_sort.c  test_sortb.c  test_version.c
zlib/: Makefile.am  adler32.c  compress.c  example.c  gzio.c  minigzip.c  sc_modifications.txt  uncompr.c  zutil.h
(+21 files in other folders)
